--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -21,4 +21,5 @@ button {
 p {
     text-align: left;
     padding-left: 5%;
+    line-height: 100%;
 }
